--- a/clickygame/package.json
+++ b/clickygame/package.json
@@ -2,12 +2,17 @@
   "name": "clickygame",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://aosilvester.github.io/clickyGame",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "reactstrap": "^7.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
